# strategicMemoryPlanner

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  MVP.md  Modelfile  dev.sh  setup.sh  smp.sh  smp.toml  smphtml
prompts/: detect_phase.txt  extract_decisions.txt
src/: config.rs  main.rs
src/api/: context.rs  debug.rs  ingest.rs  memory.rs  mermaid.rs  mod.rs  projects.rs  sessions.rs  system.rs
src/db/: mod.rs
src/db/migrations/: 001_initial.sql  002_project_path.sql  003_mermaid_diagrams.sql  004_decisions_source_session.sql
src/events/: emitter.rs  mod.rs  sse.rs
src/ingester/: filter.rs  mermaid.rs  mod.rs  parser.rs
src/memory/: export.rs  hot.rs  mod.rs  state.rs
src/secretary/: embedded.rs  extract.rs  mod.rs  ollama.rs  openai.rs  prompts.rs
static/: dashboard.html
test_data/: sample_session.jsonl
